# sentiment-analysis

./: .env.exemple  .gitignore  README.md  demonstracao.m4v  pyproject.toml
app/: main.py
app/api/v1/: root.py
app/core/: config.py  vectordb.py
app/mcp_server/: sentiment.py
app/models/: sentiment_analysis.py
app/repositories/: review_repository.py
app/services/: sentiment_service.py
dashboard/: app.py
dashboard/pages/: chat.py  dash.py
docker/: compose.yml
notebooks/: nb0-explore.ipynb  nb1-embedding.ipynb  nb2-classification.ipynb  nb3-mcp.ipynb
scripts/: ingest.py  refine.py
